# txdot_api

./: .env.example  .gitignore  AGENTS.md  README.md  VERATEX_CODEX_BRIEF.md  pyproject.toml
backend/app/: __init__.py  analytics.py  annotator.py  config.py  contracts.py  demo_video.py  detectors.py  events.py  main.py  pipeline.py  repository.py  time.py  tracking.py  video_sources.py  zones.py
backend/tests/: conftest.py  test_analytics.py  test_api.py  test_events.py  test_video_sources.py  test_zones.py
config/: demo.yaml
docs/: API_EXAMPLES.md  ARCHITECTURE.md  COMMAND_LOG.md  DEMO_SCRIPT.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  PolygonCanvas.tsx  ZoneEditor.test.tsx  ZoneEditor.tsx  api.ts  eventDescription.test.ts  eventDescription.ts  styles.css  types.ts  useLiveData.ts  videoCoordinates.test.ts  videoCoordinates.ts
frontend/src/test/: setup.ts
plans/: FIRST_CODEX_PROMPT.md
plans/next_steps/2026-07-22/: README.md
